整理方法顺序